src/test/deca/context/invalid/expr_cast_boolean_to_void.deca
// Test of the rule (3.39) : can't cast boolean to void.

{
	void var1;
	boolean var2;
	var1 = (void)(var2);
}

// Résultat :
//# a
